--- a/Main/src/index.css
+++ b/Main/src/index.css
@@ -1,60 +1,228 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+/* App.css or another global CSS file */
+
+/* Style for the header */
+.App-header {
+  background-color: #f4f4f4; /* Light gray background */
+  color: #333; /* Dark text */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+/* Style for the header brand (title) */
+.header-brand {
+  color: #333; /* Dark text */
+  text-decoration: none;
+}
+
+/* Styles for the navigation */
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+/* Navigation list styles */
+.header-nav .navbar-nav {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+/* Style for each navigation item */
+.header-nav .nav-item {
+  margin: 0 1rem;
+}
+
+/* Style for navigation links */
+.header-nav .nav-link {
+  color: #333; /* Dark text */
+  text-decoration: none;
+  font-size: 1.2rem;
+  padding: 0.5rem 0;
+}
+
+/* Style for active navigation link and hover state */
+.header-nav .nav-link.active,
+.header-nav .nav-link:hover {
+  color: #8c8c8c; /* Light gray text for selected or hovered nav links */
+}
+
+/* Style for the navbar toggler */
+.navbar-toggler {
+  border: 1px solid #333; /* Dark border for the toggler */
+  background: none;
+}
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(51, 51, 51, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+.about {
+  color: #333; /* Dark text */
+  background-color: #f4f4f4; /* Light gray background */
+  padding: 2rem;
+  max-width: 800px;
+  margin: 2rem auto;
+}
+
+.about h3 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.about p {
+  font-size: 1rem;
+  line-height: 1.6;
+  margin-bottom: 1rem;
+}
+
+.about-container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  color: #333; /* Dark text */
+  background-color: #f4f4f4; /* Light gray background */
+}
+
+.about-header {
+  flex-basis: 100%;
+  text-align: center;
+}
+
+.about-content {
+  flex-basis: 100%;
+  text-align: left;
+  padding: 20px;
+}
+
+/* Responsive behavior for larger screens */
+@media (min-width: 768px) {
+  .about-container {
+    flex-direction: row;
+  }
+
+  .about-header,
+  .about-content {
+    flex: 1;
+    padding: 1rem;
+  }
+
+  .about-header {
+    text-align: center;
+  }
+  
+  .about-content {
+    text-align: left; 
+    padding-left: 2rem; 
+  }
+}
+
+@media (min-width: 1024px) {
+  .about-header h2 {
+    text-align: center;
+    font-size: 2.5rem; 
+  }
+}
+
+h2 {
+  margin-bottom: 1rem;
+  text-align: center;
+  color: #333;
+}
+
+p {
+  font-size: 1rem;
   line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+/* Footer.css */
+
+.footer {
+  background-color: #f4f4f4; /* Light gray background */
+  color: #333; /* Dark text */
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.footer a {
+  margin: 0 10px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.footer img {
+  width: 50px;
+  filter: grayscale(100%);
+  transition: filter 0.3s ease;
+  margin: 0 10px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.footer img:hover {
+  filter: grayscale(0);
+}
+
+.project-card {
+  position: relative;
+  overflow: hidden;
+}
+
+.project-image {
+  width: 100%;
+  display: block;
+  transition: filter 0.3s ease;
+}
+
+.project-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #f4f4f4; /* Light gray semi-transparent background */
+  color: #333; /* Dark text */
+  font-size: large;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  backdrop-filter: blur(1px);
+  padding: 1rem;
+}
+
+.project-title,
+.project-techstack,
+.project-github-link {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.3s ease;
+}
+
+.project-card:hover .project-image {
+  filter: blur(2px);
+}
+
+.project-card:hover .project-info {
+  opacity: 1;
+}
+
+.project-card:hover .project-title,
+.project-card:hover .project-techstack,
+.project-card:hover .project-github-link {
+  visibility: visible;
+  opacity: 1;
+}
+
+.project-github-link {
+  margin-top: 0.5rem;
+}
+
+.project-github-link img {
+  width: 44px;
 }
